--- a/LucentDb.Win.UI/App.config
+++ b/LucentDb.Win.UI/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="LucentDbConnection"
-         connectionString="Data Source=INNOVATIVE-MSTR;Initial Catalog=LucentDb;Integrated Security=True"
+          connectionString="Data Source=.\sqlexpress;Initial Catalog=LucentDb;Integrated Security=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
