--- a/LucentDb.Validator/LucentDb.Validator.csproj
+++ b/LucentDb.Validator/LucentDb.Validator.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>LucentDb.Validator</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,11 +43,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbConnectionFactory.cs" />
+    <Compile Include="ScriptResolver\FileSystemScriptResolver.cs" />
+    <Compile Include="ScriptResolver\HttpScriptResolver.cs" />
+    <Compile Include="ScriptResolver\IScriptResolver.cs" />
     <Compile Include="IValidator.cs" />
-    <Compile Include="LucentExtensions.cs" />
+    <Compile Include="ScriptResolver\ScriptResolverFactory.cs" />
+    <Compile Include="ScriptResolver\SqlSnippetResolver.cs" />
+    <Compile Include="SqlScriptRunner.cs" />
     <Compile Include="SqlScriptTest.cs" />
-    <Compile Include="SQLScriptValidator.cs" />
-    <Compile Include="SQLSnippetValidator.cs" />
+    <Compile Include="SqlScriptValidator.cs" />
+    <Compile Include="SqlScriptValidatorBase.cs" />
     <Compile Include="TestCondition.cs" />
     <Compile Include="ValidationProcessor.cs" />
     <Compile Include="ValidationResponse.cs" />
@@ -52,12 +60,30 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LucentDb.Common\LucentDb.Common.csproj">
+      <Project>{1D525ABE-3DDA-4A89-8BDF-2724F3B29ECE}</Project>
+      <Name>LucentDb.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LucentDb.Data\LucentDb.Data.vbproj">
+      <Project>{97E07AB1-AADD-4A17-BD14-1D876CCAB30A}</Project>
+      <Name>LucentDb.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LucentDb.Domain.Entities\LucentDb.Domain.Entities.csproj">
       <Project>{4ADCF3CB-049F-4BE2-B421-7875DC51301B}</Project>
       <Name>LucentDb.Domain.Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Validators\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
