--- a/LucentDb.Domain/LucentDb.Domain.csproj
+++ b/LucentDb.Domain/LucentDb.Domain.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataRepository.cs" />
+    <Compile Include="RepositoryContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\TestCondition.cs" />
     <Compile Include="Model\ValidationResponse.cs" />
