--- a/LucentDb.Common/LucentDb.Common.csproj
+++ b/LucentDb.Common/LucentDb.Common.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1D525ABE-3DDA-4A89-8BDF-2724F3B29ECE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LucentDb.Common</RootNamespace>
+    <RootNamespace>LucentDb</RootNamespace>
     <AssemblyName>LucentDb.Common</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -45,13 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeepCloner.cs" />
-    <Compile Include="NullCheckExtension.cs" />
+    <Compile Include="Common\DeepCloner.cs" />
+    <Compile Include="Common\NullCheckExtension.cs" />
+    <Compile Include="IO\DefaultFileService.cs" />
+    <Compile Include="IO\IFileService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
