--- a/LucentDb.ValidatorTests/LucentDb.ValidatorTests.csproj
+++ b/LucentDb.ValidatorTests/LucentDb.ValidatorTests.csproj
@@ -37,6 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1507.0118\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -52,12 +55,18 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptResolver\FileSystemScriptResolverTests.cs" />
+    <Compile Include="ScriptResolver\HttpScriptResolverTests.cs" />
     <Compile Include="SqlScriptValidatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LucentDb.Common\LucentDb.Common.csproj">
+      <Project>{1D525ABE-3DDA-4A89-8BDF-2724F3B29ECE}</Project>
+      <Name>LucentDb.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LucentDb.Domain.Entities\LucentDb.Domain.Entities.csproj">
       <Project>{4ADCF3CB-049F-4BE2-B421-7875DC51301B}</Project>
       <Name>LucentDb.Domain.Entities</Name>
