--- a/LucentDb.ValidatorTests/LucentDb.ValidatorTests.csproj
+++ b/LucentDb.ValidatorTests/LucentDb.ValidatorTests.csproj
@@ -44,6 +44,7 @@
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -54,6 +55,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="FakeResponseHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScriptResolver\FileSystemScriptResolverTests.cs" />
     <Compile Include="ScriptResolver\HttpScriptResolverTests.cs" />
