--- a/LucentDb.Win.UI/App.config
+++ b/LucentDb.Win.UI/App.config
@@ -1,11 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="LucentDbConnection"
-         connectionString="Data Source=.\sqlexpress;Initial Catalog=LucentDb;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
+    <add name="LucentDbConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=LucentDb;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
 <!--connectionString="Data Source=.\sqlexpress;Initial Catalog=LucentDb;Integrated Security=True"-->
 <!--connectionString="Data Source=INNOVATIVE-MSTR;Initial Catalog=LucentDb;Integrated Security=True"-->
