--- a/LucentDb.Domain/LucentDb.Domain.csproj
+++ b/LucentDb.Domain/LucentDb.Domain.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LucentDb.Domain</RootNamespace>
     <AssemblyName>LucentDb.Domain</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,10 +30,12 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,10 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RepositoryContext.cs" />
+    <Compile Include="DbRepositoryContext.cs" />
+    <Compile Include="IRepositoryContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\TestCondition.cs" />
     <Compile Include="Model\ValidationResponse.cs" />
+    <Compile Include="WebApiRepositoryContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LucentDb.Data.Repository\LucentDb.Data.Repository.vbproj">
@@ -52,6 +58,10 @@
     <ProjectReference Include="..\LucentDb.Data.SQLClient\LucentDb.Data.SqlClient.vbproj">
       <Project>{46C3E43A-B955-4F85-BE09-E06E7B0C45E9}</Project>
       <Name>LucentDb.Data.SqlClient</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LucentDb.Data.WebApiRepository\LucentDb.Data.WebApiRepository.csproj">
+      <Project>{33e9c079-3f0b-4f3f-abe5-5a72b9d73da6}</Project>
+      <Name>LucentDb.Data.WebApiRepository</Name>
     </ProjectReference>
     <ProjectReference Include="..\LucentDb.Data\LucentDb.Data.vbproj">
       <Project>{97e07ab1-aadd-4a17-bd14-1d876ccab30a}</Project>
