--- a/LucentDb.Win.UI/App.config
+++ b/LucentDb.Win.UI/App.config
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings><add key="LucentDbWebApiPath" value="http://localhost:60205/"/></appSettings>
   <connectionStrings>
     <add name="LucentDbConnection" connectionString="Data Source=.\sqlexpress;Initial Catalog=LucentDb;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
