--- a/LucentDb.Validator/LucentDb.Validator.csproj
+++ b/LucentDb.Validator/LucentDb.Validator.csproj
@@ -45,7 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Comparer\ComparerFactory.cs" />
+    <Compile Include="Comparer\AreEqualComparer.cs" />
+    <Compile Include="Comparer\AreNotEqualComparer.cs" />
     <Compile Include="DbConnectionFactory.cs" />
+    <Compile Include="Comparer\ITestValueComparer.cs" />
     <Compile Include="ScriptResolver\FileSystemScriptResolver.cs" />
     <Compile Include="ScriptResolver\HttpScriptResolver.cs" />
     <Compile Include="ScriptResolver\IScriptResolver.cs" />
