--- a/LucentDb.WebTests/app.config
+++ b/LucentDb.WebTests/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
    <connectionStrings>
-    <add name="LucentDbConnection" connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=LucentDb;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="LucentDbConnection" connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=LucentDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -36,6 +36,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SimpleInjector" publicKeyToken="984cb50dea722e99" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.8.3.0" newVersion="2.8.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
