--- a/LucentDb.Web.UI/LucentDb.Web.UI.csproj
+++ b/LucentDb.Web.UI/LucentDb.Web.UI.csproj
@@ -585,6 +585,10 @@
       <Project>{4A33135E-3A6A-4A9A-9E20-8D8613BF4785}</Project>
       <Name>LucentDb.Validator</Name>
     </ProjectReference>
+    <ProjectReference Include="..\LucentDb.Web\LucentDb.Web.csproj">
+      <Project>{ECF69A55-449E-47D1-B28C-FC9B2694FEBC}</Project>
+      <Name>LucentDb.Web</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
