--- a/LucentDb.Web/LucentDb.Web.csproj
+++ b/LucentDb.Web/LucentDb.Web.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formatter\BrowserJsonFormatter.cs" />
     <Compile Include="PagedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UrlParameterEncodedContent.cs" />
