--- a/LucentDb.Web.UI/LucentDb.Web.UI.csproj
+++ b/LucentDb.Web.UI/LucentDb.Web.UI.csproj
@@ -94,6 +94,7 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
