--- a/LucentDb.Domain/LucentDb.Domain.csproj
+++ b/LucentDb.Domain/LucentDb.Domain.csproj
@@ -44,11 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\ConnectionFactory.cs" />
     <Compile Include="DbRepositoryContext.cs" />
     <Compile Include="IRepositoryContext.cs" />
+    <Compile Include="Factories\ProjectFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\TestCondition.cs" />
     <Compile Include="Model\ValidationResponse.cs" />
+    <Compile Include="Factories\TestFactory.cs" />
+    <Compile Include="Factories\TestGroupFactory.cs" />
     <Compile Include="WebApiRepositoryContext.cs" />
   </ItemGroup>
   <ItemGroup>
