--- a/LucentDb.Web.UI/Web.config
+++ b/LucentDb.Web.UI/Web.config
@@ -7,9 +7,7 @@
 <configuration>
   <configSections />
   <connectionStrings>
-    <add name="LucentDbConnection"
-         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\LucentDb.mdf;Initial Catalog=LucentDb;Integrated Security=True"
-         providerName="System.Data.SqlClient" />
+    <add name="LucentDbConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\LucentDb.mdf;Initial Catalog=LucentDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings />
   <!--
@@ -34,8 +32,7 @@
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*"
-           type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
   <runtime>
