--- a/LucentDb.Web.UI/packages.config
+++ b/LucentDb.Web.UI/packages.config
@@ -55,5 +55,6 @@
   <package id="SimpleInjector.Integration.WebApi" version="2.8.1" targetFramework="net45" />
   <package id="Spin.js" version="2.0" targetFramework="net45" />
   <package id="toastr" version="2.0.3" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Bootswatch.Yeti" version="3.2.0.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
