--- a/LucentDb.Web.UI/LucentDb.Web.UI.csproj
+++ b/LucentDb.Web.UI/LucentDb.Web.UI.csproj
@@ -228,6 +228,7 @@
     </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
+    <Content Include="Content\bootstrap.checkbox.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.yeti.css" />
