--- a/LucentDb.Data/LucentDb.Data.vbproj
+++ b/LucentDb.Data/LucentDb.Data.vbproj
@@ -58,6 +58,7 @@
     <Compile Include="Interfaces\IDbCommandProvider\IDbExpectedResultCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbExpectedResultTypeCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbProjectCommandProvider.vb" />
+    <Compile Include="Interfaces\IDbCommandProvider\IDbProjectDetailsViewCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbRunHistoryCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbTestCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbTestGroupCommandProvider.vb" />
@@ -67,6 +68,7 @@
     <Compile Include="Interfaces\IRepository\IConnectionRepository.vb" />
     <Compile Include="Interfaces\IRepository\IExpectedResultRepository.vb" />
     <Compile Include="Interfaces\IRepository\IExpectedResultTypeRepository.vb" />
+    <Compile Include="Interfaces\IRepository\IProjectDetailsViewRepository.vb" />
     <Compile Include="Interfaces\IRepository\IProjectRepository.vb" />
     <Compile Include="Interfaces\IRepository\IRunHistoryRepository.vb" />
     <Compile Include="Interfaces\IRepository\ITestGroupRepository.vb" />
