--- a/LucentDb.Domain.Entities.Extensions/LucentDb.Domain.Entities.Extensions.csproj
+++ b/LucentDb.Domain.Entities.Extensions/LucentDb.Domain.Entities.Extensions.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ConnectionProviderExtension.cs" />
     <Compile Include="ExpectedResultExtension.cs" />
     <Compile Include="ExpectedResultTypeExtension.cs" />
+    <Compile Include="ProjectDetailsViewExtension.cs" />
     <Compile Include="ProjectExtension.cs" />
     <Compile Include="RunHistoryExtension.cs" />
     <Compile Include="TestExtension.cs" />
