--- a/LucentDb.Web.UI/LucentDb.Web.UI.csproj
+++ b/LucentDb.Web.UI/LucentDb.Web.UI.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Controllers\API\ExpectedResultAPIController.cs" />
     <Compile Include="Controllers\API\ExpectedResultTypeAPIController.cs" />
     <Compile Include="Controllers\API\ProjectAPIController.cs" />
+    <Compile Include="Controllers\API\ProjectDetailsViewAPIController.cs" />
     <Compile Include="Controllers\API\RunHistoryAPIController.cs" />
     <Compile Include="Controllers\API\TestAPIController.cs" />
     <Compile Include="Controllers\API\TestGroupAPIController.cs" />
@@ -154,7 +155,9 @@
     <Compile Include="Controllers\API\ValidateApiController.cs" />
     <Compile Include="Controllers\AssertTypeController.cs" />
     <Compile Include="Controllers\ConnectionController.cs" />
+    <Compile Include="Controllers\ConnectionProviderController.cs" />
     <Compile Include="Controllers\ExpectedResultController.cs" />
+    <Compile Include="Controllers\ExpectedResultTypeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\RunHistoryController.cs" />
@@ -536,18 +539,6 @@
     <Content Include="Views\RunHistory\Details.cshtml" />
     <Content Include="Views\RunHistory\Edit.cshtml" />
     <Content Include="Views\RunHistory\Index.cshtml" />
-    <Content Include="Views\ScriptType\Create.cshtml" />
-    <Content Include="Views\ScriptType\Details.cshtml" />
-    <Content Include="Views\ScriptType\Edit.cshtml" />
-    <Content Include="Views\ScriptType\Index.cshtml" />
-    <Content Include="Views\Script\Create.cshtml" />
-    <Content Include="Views\Script\Details.cshtml" />
-    <Content Include="Views\Script\Edit.cshtml" />
-    <Content Include="Views\Script\Index.cshtml" />
-    <Content Include="Views\Script_ExpectedResult\Create.cshtml" />
-    <Content Include="Views\Script_ExpectedResult\Details.cshtml" />
-    <Content Include="Views\Script_ExpectedResult\Edit.cshtml" />
-    <Content Include="Views\Script_ExpectedResult\Index.cshtml" />
     <Content Include="Views\TestType\Create.cshtml" />
     <Content Include="Views\TestType\Details.cshtml" />
     <Content Include="Views\TestType\Edit.cshtml" />
@@ -561,6 +552,18 @@
     <Content Include="Views\Test_Script\Edit.cshtml" />
     <Content Include="Views\Test_Script\Index.cshtml" />
     <Content Include="Scripts\toastr.min.js.map" />
+    <Content Include="Views\TestGroup\Create.cshtml" />
+    <Content Include="Views\TestGroup\Details.cshtml" />
+    <Content Include="Views\TestGroup\Edit.cshtml" />
+    <Content Include="Views\TestGroup\Index.cshtml" />
+    <Content Include="Views\ConnectionProvider\Create.cshtml" />
+    <Content Include="Views\ConnectionProvider\Details.cshtml" />
+    <Content Include="Views\ConnectionProvider\Edit.cshtml" />
+    <Content Include="Views\ConnectionProvider\Index.cshtml" />
+    <Content Include="Views\ExpectedResultType\Create.cshtml" />
+    <Content Include="Views\ExpectedResultType\Details.cshtml" />
+    <Content Include="Views\ExpectedResultType\Edit.cshtml" />
+    <Content Include="Views\ExpectedResultType\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Providers\" />
