Update Test Details and Edit Views

--- a/LucentDb.Web.UI/LucentDb.Web.UI.csproj
+++ b/LucentDb.Web.UI/LucentDb.Web.UI.csproj
@@ -188,9 +188,11 @@
     <Content Include="app\config.exceptionHandler.js" />
     <Content Include="app\config.js" />
     <Content Include="app\config.route.js" />
+    <Content Include="app\ConnectionProvider\Index.js" />
     <Content Include="app\Connection\Index.js" />
     <Content Include="app\dashboard\dashboard.html" />
     <Content Include="app\dashboard\dashboard.js" />
+    <Content Include="app\ExpectedResultType\Index.js" />
     <Content Include="app\ExpectedResult\Index.js" />
     <Content Include="app\layout\shell.html" />
     <Content Include="app\layout\shell.js" />
@@ -198,33 +200,27 @@
     <Content Include="app\layout\sidebar.js" />
     <Content Include="app\layout\topnav.html" />
     <Content Include="app\layout\widgetheader.html" />
+    <Content Include="app\ProjectDetailsView\Index.js" />
     <Content Include="app\Project\Index.js" />
-    <Content Include="app\Project_Connection\Index.js" />
     <Content Include="app\RunHistory\Index.js" />
-    <Content Include="app\ScriptType\Index.js" />
-    <Content Include="app\Script\Index.js" />
-    <Content Include="app\Script\Script.html" />
-    <Content Include="app\Script\Script.js" />
-    <Content Include="app\Script_ExpectedResult\Index.js" />
     <Content Include="app\services\AssertTypeDataService.js" />
     <Content Include="app\services\ConnectionDataService.js" />
+    <Content Include="app\services\ConnectionProviderDataService.js" />
     <Content Include="app\services\datacontext.js" />
     <Content Include="app\services\directives.js" />
     <Content Include="app\services\ExpectedResultDataService.js" />
+    <Content Include="app\services\ExpectedResultTypeDataService.js" />
     <Content Include="app\services\LucentDbDataContext.js" />
     <Content Include="app\services\ProjectDataService.js" />
-    <Content Include="app\services\Project_ConnectionDataService.js" />
+    <Content Include="app\services\ProjectDetailsViewDataService.js" />
     <Content Include="app\services\RunHistoryDataService.js" />
-    <Content Include="app\services\ScriptDataService.js" />
     <Content Include="app\services\ScriptTypeDataService.js" />
-    <Content Include="app\services\Script_ExpectedResultDataService.js" />
     <Content Include="app\services\TestDataService.js" />
     <Content Include="app\services\TestTypeDataService.js" />
-    <Content Include="app\services\Test_ScriptDataService.js" />
+    <Content Include="app\TestGroup\Index.js" />
     <Content Include="app\TestType\Index.js" />
     <Content Include="app\Test\details.js" />
     <Content Include="app\Test\Index.js" />
-    <Content Include="app\Test_Script\Index.js" />
     <Content Include="App_Data\LucentDb.mdf" />
     <Content Include="App_Data\LucentDb_log.ldf">
       <DependentUpon>LucentDb.mdf</DependentUpon>
