--- a/LucentDb.WebTests/app.config
+++ b/LucentDb.WebTests/app.config
@@ -2,7 +2,9 @@
 
 <configuration>
   <connectionStrings>
-    <add name="LucentDbConnection" connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=LucentDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="LucentDbConnection"
+         connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=LucentDb;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
