--- a/LucentDb.Data/LucentDb.Data.vbproj
+++ b/LucentDb.Data/LucentDb.Data.vbproj
@@ -60,6 +60,7 @@
     <Compile Include="Interfaces\IDbCommandProvider\IDbProjectCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbProjectDetailsViewCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbRunHistoryCommandProvider.vb" />
+    <Compile Include="Interfaces\IDbCommandProvider\IDbRunHistoryDetailCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbTestCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbTestGroupCommandProvider.vb" />
     <Compile Include="Interfaces\IDbCommandProvider\IDbTestTypeCommandProvider.vb" />
@@ -70,6 +71,7 @@
     <Compile Include="Interfaces\IRepository\IExpectedResultTypeRepository.vb" />
     <Compile Include="Interfaces\IRepository\IProjectDetailsViewRepository.vb" />
     <Compile Include="Interfaces\IRepository\IProjectRepository.vb" />
+    <Compile Include="Interfaces\IRepository\IRunHistoryDetailRepository.vb" />
     <Compile Include="Interfaces\IRepository\IRunHistoryRepository.vb" />
     <Compile Include="Interfaces\IRepository\ITestGroupRepository.vb" />
     <Compile Include="Interfaces\IRepository\ITestRepository.vb" />
