--- a/LucentDb.Data.WebApiRepository/LucentDb.Data.WebApiRepository.csproj
+++ b/LucentDb.Data.WebApiRepository/LucentDb.Data.WebApiRepository.csproj
@@ -55,7 +55,9 @@
     <Compile Include="WebApiConnectionRepository.cs" />
     <Compile Include="WebApiExpectedResultRepository.cs" />
     <Compile Include="WebApiExpectedResultTypeRepository.cs" />
+    <Compile Include="WebApiProjectDetailsViewRepository.cs" />
     <Compile Include="WebApiProjectRepository.cs" />
+    <Compile Include="WebApiRunHistoryDetailRepository.cs" />
     <Compile Include="WebApiRunHistoryRepository.cs" />
     <Compile Include="WebApiTestGroupRepository.cs" />
     <Compile Include="WebApiTestRepository.cs" />
