--- a/LucentDb.Domain.Entities/LucentDb.Domain.Entities.csproj
+++ b/LucentDb.Domain.Entities/LucentDb.Domain.Entities.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Test.cs" />
     <Compile Include="TestGroup.cs" />
     <Compile Include="TestType.cs" />
+    <Compile Include="TestValueType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
